test/tests/compiler/12_unsigned_integers/invalid_lex/invalid_suffix_2.plx
pub fn main(none) i32 {
    # lul is not a valid suffix for integer constants
    return 0lul
}
